Make main container style work correctly on Firefox

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
         "scores game next"
         "text game circle";
     grid-template-columns: 1fr max-content 1fr;
-    grid-template-rows: 33% 67%;
+    grid-template-rows: 33vh 67vh;
 }
 
 #game-canvas {
